@startuml
' ER diagram - current database schema + runtime migrations
hide circle
skinparam linetype ortho

entity users {
  * id : varchar
  --
  username : varchar
  password : varchar
  email : varchar
  is_banned : boolean
}

entity bidders {
  * user_id : varchar
  --
  account_balance : double
}

entity sellers {
  * user_id : varchar
  --
  rating : double
  account_balance : double
}

entity admins {
  * user_id : varchar
  --
  access_level : varchar
}

entity items {
  * id : varchar
  --
  name : varchar
  description : text
  seller_id : varchar
}

entity electronics {
  * item_id : varchar
  --
  warranty_months : int
}

entity arts {
  * item_id : varchar
  --
  author : varchar
}

entity vehicles {
  * item_id : varchar
  --
  brand : varchar
}

entity auction_sessions {
  * id : varchar
  --
  item_id : varchar
  seller_id : varchar
  winner_id : varchar
  starting_price : double
  current_price : double
  start_time : datetime
  end_time : datetime
}

entity bids {
  * id : varchar
  --
  bidder_id : varchar
  auction_session_id : varchar
  amount : double
  time : datetime
}

entity transactions {
  * id : int
  --
  user_id : varchar
  amount : double
  type : varchar
  description : varchar
  time : datetime
}

users ||--o| bidders : has role
users ||--o| sellers : has role
users ||--o| admins : has role
users ||--o{ items : sells
items ||--o| electronics : subtype
items ||--o| arts : subtype
items ||--o| vehicles : subtype
items ||--o{ auction_sessions : listed in
users ||--o{ auction_sessions : seller
users ||--o{ auction_sessions : winner
auction_sessions ||--o{ bids : contains
users ||--o{ bids : places
users ||--o{ transactions : owns
@enduml